# instagram-cli

./: .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  QUICK_REF.md  README.md  beta-testing.md  email.md  esbuild.config.mjs  instagram-cli.spec  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.build.json  tsconfig.json  xo.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: prettier-ts.yml  publish-python.yml  publish-ts.yml  python-publish.yml  python-versions.yml  ruff-py.yml  test-python.yml  test-ts.yml  typescript-publish.yml
contrib/snap/: snapcraft.yaml
docs/: beta-testing.md  chat-commands-design.md  chat-ui-design.md  wrapped.md
instagram/: __init__.py  analytics.py  api.py  auth.py  cache.py  chat.py  chat_commands.py  chat_ui.py  cli.py  client.py  commands.py  configs.py
instagram-py/: .gitignore  README.md  pyproject.toml
instagram-py/instagram/: auth.py  client.py
instagram-py/snap/: snapcraft.yaml
instagram-py/tests/: test.py
instagram-ts/: .gitignore  .prettierignore  DEVELOPMENT.md  README.md  package-lock.json  package.json  readme.md  test.tsx  tsconfig.json
instagram-ts/.husky/: pre-commit
instagram-ts/data/: feed-item-properties.json  message-schema.json
instagram-ts/designs/: LOGGING.md  chat-commands-design.md  chat-ui-design.md
instagram-ts/docs/: stories-design.md
instagram-ts/patches/: ink+5.2.1.patch
instagram-ts/source/: app.mock.tsx  app.tsx  auth.ts  cleanup.ts  cli.mock.ts  cli.ts  cli.tsx  client.ts  commands.ts  config.ts  scheduler.ts  session.ts
instagram/api/: __init__.py  analytics.py  direct_messages.py  scheduler.py  utils.py
instagram/chat_ui/: __init__.py
instagram/utils/: loading.py  notification_utils.py
installers/instagram-cli-macOS/: instagram-cli-macOS.dmg
patches/: instagram-private-api+1.46.1.patch
skills/instagram-skill/: SKILL.md
snap/: snapcraft.yaml
source/: cli.ts  client.ts  config.ts  patch.ts  session.ts
source/commands/: chat.tsx  cleanup.tsx  config.tsx  download.tsx  feed-list.tsx  feed.tsx  inbox.tsx  index.tsx  notifications.tsx  notify.tsx  profile.tsx  read.tsx  reply.tsx  search-thread.tsx  search-user.tsx  seen.tsx  send-photo.tsx  ui.tsx  (+7 more)
tests/: chat-commands.test.ts  cursor.test.tsx  e2e.test.tsx  message-parser.test.ts  mouse.test.ts  path-security.test.ts  post-story.test.tsx  profile.test.tsx  read-command.test.ts  test.py  test.tsx  text-input.test.tsx  thread-item.test.tsx  ui-components.test.tsx
(+171 files in other folders)
